package com.socialpulse.app.post.domain.enums;

public enum PostType {
    ORIGINAL,
    SHARE
}
