package com.socialpulse.app.report.enums;

public enum ReportTargetType {
    POST,
    COMMENT,
    USER
}