@startuml Social-Pulse Domain Class Diagram

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam shadowing false
skinparam nodesep 30
skinparam ranksep 25
skinparam class {
    FontSize 11
    AttributeFontSize 9
}

title Social-Pulse - Full Domain Class Diagram

' ==================== COMMON ====================

enum ReactionType {
    UPVOTE
    DOWNVOTE
}

' ==================== USER MODULE ====================

package "user.domain" {
    enum UserStatus {
        PENDING
        ACTIVE
        LOCKED
    }

    enum VerificationStatus {
        VERIFIED
        NOT_VERIFIED
    }

    enum UserGender {
        MALE
        FEMALE
        OTHER
    }

    class User {
        - id: Long
        - username: String
        - email: String
        - passwordHash: String
        - status: UserStatus
        - roles: Set<Role>
        - verification: VerificationStatus
        - isLocked: boolean
        - failedLoginAttempts: int
        - lastLoginAt: LocalDateTime
        - createdAt: LocalDateTime
        - updatedAt: LocalDateTime
    }

    class UserProfile {
        - id: Long
        - displayName: String
        - bio: String
        - dob: LocalDate
        - gender: UserGender
        - avatarUrl: String
        - avatarPublicId: String
        - updatedAt: LocalDateTime
    }

    class Role {
        - id: Long
        - name: String
        - description: String
        - permissions: Set<Permission>
        - createdAt: LocalDateTime
        - updatedAt: LocalDateTime
    }

    class Permission {
        - id: Long
        - name: String
        - description: String
        - createdAt: LocalDateTime
        - updatedAt: LocalDateTime
    }
}

' ==================== POST MODULE ====================

package "post.domain" {
    enum PostType {
        ORIGINAL
        SHARE
    }

    enum Privacy {
        PUBLIC
        PRIVATE
    }

    class Post {
        - id: Long
        - userId: Long
        - content: String
        - imageUrl: String
        - imagePublicId: String
        - parentPostId: Long
        - type: PostType
        - privacy: Privacy
        - upvoteCount: Long
        - downvoteCount: Long
        - cmtCount: Long
        - viewCount: Long
        - shareCount: Long
        - hotScore: Double
        - toxic: boolean
        - toxicScore: Double
        - createdAt: LocalDateTime
        - updatedAt: LocalDateTime
        - deletedAt: LocalDateTime
    }

    class PostReactions {
        - id: Long
        - userId: Long
        - postId: Long
        - reactionType: ReactionType
        - createdAt: LocalDateTime
    }
}

' ==================== COMMENT MODULE ====================

package "comment.domain" {
    class Comment {
        - id: Long
        - postId: Long
        - userId: Long
        - parentCommentId: Long
        - content: String
        - createdAt: LocalDateTime
        - upvoteCount: Long
        - downvoteCount: Long
        - deleted: boolean
        - edited: boolean
    }

    class CommentReaction {
        - id: Long
        - commentId: Long
        - userId: Long
        - reactionType: ReactionType
        - createdAt: LocalDateTime
    }
}

' ==================== AUTH MODULE ====================

package "auth.domain" {
    class RefreshToken {
        - id: UUID
        - userId: Long
        - tokenHash: String
        - expiresAt: LocalDateTime
        - createdAt: LocalDateTime
        - revokedAt: LocalDateTime
        - replacedByToken: UUID
    }

    class Otp {
        - email: String
        - otpCode: String
        - expiredAt: Long
        - attemptCount: Long
    }
}

' ==================== BOOKMARK MODULE ====================

package "bookmark.domain" {
    class Bookmark {
        - id: Long
        - userId: Long
        - postId: Long
        - createdAt: LocalDateTime
    }
}

' ==================== FOLLOW MODULE ====================

package "follow.domain" {
    class Follow {
        - id: Long
        - followerId: Long
        - followingId: Long
        - createdAt: LocalDateTime
    }
}

' ==================== NOTIFICATION MODULE ====================

package "notification.domain" {
    enum NotificationType {
        FOLLOWED_YOU
        POST_REACTED
        COMMENTED_ON_POST
        REPLIED_TO_COMMENT
        COMMENT_REACTED
    }

    enum NotificationResourceType {
        USER
        POST
        COMMENT
    }

    class Notification {
        - id: Long
        - recipientId: Long
        - actorId: Long
        - type: NotificationType
        - resourceType: NotificationResourceType
        - resourceId: Long
        - message: String
        - createdAt: LocalDateTime
        - readAt: LocalDateTime
    }
}

' ==================== REPORT MODULE ====================

package "report.domain" {
    enum ReportStatus {
        PENDING
        RESOLVED
        REJECTED
    }

    enum ReportTargetType {
        POST
        COMMENT
        USER
    }

    class Report {
        - id: Long
        - reporterId: Long
        - targetType: ReportTargetType
        - targetId: Long
        - reason: String
        - status: ReportStatus
        - createdAt: LocalDateTime
    }
}

' ==================== FEED MODULE ====================

package "feed.domain" {
    enum Source {
        RECENT
        FOLLOWING
        POPULAR
        RANDOM
    }

    class FeedItem {
        - postId: Long
        - userId: Long
        - aiScore: Double
        - source: Source
        - rankedAt: LocalDateTime
    }

    class CandidatePost {
        - post: Post
        - source: Source
    }
}

' ==================== RELATIONSHIPS ====================

' User internal
User "1" *-right- "1" UserProfile
User "1" -- "*" Role
Role "1" -- "*" Permission

' User -> other modules
User "1" -- "*" Post
User "1" -- "*" Comment
User "1" -- "*" Bookmark
User "1" -- "*" Follow : follower/following
User "1" -- "*" RefreshToken
User "1" -- "*" Notification : recipient
User "1" -- "*" Report : reporter
User "1" -- "*" PostReactions
User "1" -- "*" CommentReaction

' Post relationships
Post "1" -- "*" PostReactions
Post "1" -- "*" Comment
Post "1" -- "*" Bookmark

' Comment relationships
Comment "1" -- "*" CommentReaction
Comment "1" -- "*" Comment : replies

' Feed
CandidatePost --> Post

@enduml
